--- a/GridRace/GridRace/Info.plist
+++ b/GridRace/GridRace/Info.plist
@@ -26,6 +26,8 @@
 	<string>Add photos to your locations.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app lets you keep track of interesting places. It needs access to the GPS coordinates for your location.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app lets you keep track of interesting places. It needs access to the GPS coordinates for your location.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Add photos to your locations.</string>
 	<key>UILaunchStoryboardName</key>
